# graph-analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/graphtools/: __init__.py  cli.py  draw.py  generate.py
tests/: test_draw.py  test_generate.py
